--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,8 +14,10 @@ pipeline {
             }
         }
 
-        stage('Build') {
-            steps {
+        stage('Build') 
+        {
+            steps 
+            {
                 sh 'npm install'
             }
         }
