--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -17,7 +17,7 @@
  
 
     - name: Build Docker image
-      command: docker build -t my-nodejs-image /home/ubuntu/
+      command: docker build -t my-nodejs-image:v1 /home/ubuntu/
 
     - name: Run Docker container
       command: docker run -it -d -p 8001:3000 my-nodejs-image
